--- a/flexio/meson_options.txt
+++ b/flexio/meson_options.txt
@@ -7,6 +7,9 @@ option('flexio_include_path', type: 'string', value: '',
 option('flexio_lib_path', type: 'string', value: '',
     description: 'flexio-sdk libraries path')
 
+option('mpi', type: 'string', value: '',
+    description: 'MPI installation path')
+
 option('verbose', type: 'boolean', value: false,
     description: 'verbose build')
 
