host: create cq to be used for data traffic
Signed-off-by: Liu, Changcheng <changcheng.liu@aliyun.com>

--- a/flexio/host/meson.build
+++ b/flexio/host/meson.build
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright(c) 2024 Liu, Changcheng <changcheng.liu@aliyun.com>
 
-wod_sources = ['context.c', 'mlx5.c']
+wod_sources = ['context.c', 'mlx5.c', 'mem.c']
 
 wod_inc = ['../include', flexio_include_dir]
 
